// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`examples > "colors" example should generate files 1`] = `
[
  "assets/custom.svg",
  "assets/fill.svg",
  "assets/mixed.svg",
  "assets/stroke.svg",
  "generated/sprite-info.ts",
  "generated/sprite.svg",
]
`;

exports[`examples > "colors" example should replay same output 1`] = `
[
  [
    "generated/sprite.svg",
    "62b41de3545a4350fe7ef5f3cc3adbbb221c82ef0863bf5871361f821b6cd028",
  ],
  [
    "generated/sprite-info.ts",
    "68ee54e6a56a9c10472f3613d7b688b49087d69ca2ad2591318a01138ff5f669",
  ],
]
`;

exports[`examples > "colors-advanced" example should generate files 1`] = `
[
  "assets/close.svg",
  "assets/exit.svg",
  "assets/favourite.svg",
  "assets/flags/ac.svg",
  "assets/flags/ad.svg",
  "assets/flags/ae.svg",
  "assets/flags/af.svg",
  "assets/folder-colored.svg",
  "assets/logos/linkedin.svg",
  "assets/logos/twitter.svg",
  "assets/sort-by-visibility.svg",
  "generated/flags.svg",
  "generated/logos.svg",
  "generated/sprite-info.ts",
  "generated/sprite.svg",
]
`;

exports[`examples > "colors-advanced" example should replay same output 1`] = `
[
  [
    "generated/sprite.svg",
    "ffef88ad150b16c58a121b4efe656db2159b9a3498efb53067180a88a0bfd711",
  ],
  [
    "generated/flags.svg",
    "f4756b243c9212d40aa8c5484660ff8dfae36f09c777f89555f557382f453857",
  ],
  [
    "generated/logos.svg",
    "6c76e8cdf522e8b7cb20f1fb6303584d547ff0f15054b4333c351f4f1fb1d2c6",
  ],
  [
    "generated/sprite-info.ts",
    "666e8fa9a10d2e5127d31cb8f8604ab36c16aaba9485ceb31aeb18e87e5cddd0",
  ],
]
`;

exports[`examples > "groups-with-root" example should generate files 1`] = `
[
  "assets/common/close.svg",
  "assets/common/favourite.svg",
  "assets/format/align-left.svg",
  "assets/format/tag.svg",
  "generated/common.svg",
  "generated/format.svg",
  "generated/sprite-info.ts",
]
`;

exports[`examples > "groups-with-root" example should replay same output 1`] = `
[
  [
    "generated/common.svg",
    "2eb4b56ff266279ca9c0af3b16f7f3114ae35c4555657bb106acbd15ff9d4f52",
  ],
  [
    "generated/format.svg",
    "c890959d268bf53d6006012438788b4104189d3cfaf997b0b43b2fd4f1a41159",
  ],
  [
    "generated/sprite-info.ts",
    "0c82bd5eb1a18ea3337261408254d09db5cee2c8eeb4561ed6bca996b0e0d9c9",
  ],
]
`;

exports[`examples > "groups-without-root" example should generate files 1`] = `
[
  "assets/common/close.svg",
  "assets/common/favourite.svg",
  "assets/format/align-left.svg",
  "assets/format/tag.svg",
  "generated/assets/common.svg",
  "generated/assets/format.svg",
  "generated/sprite-info.ts",
]
`;

exports[`examples > "groups-without-root" example should replay same output 1`] = `
[
  [
    "generated/assets/common.svg",
    "2eb4b56ff266279ca9c0af3b16f7f3114ae35c4555657bb106acbd15ff9d4f52",
  ],
  [
    "generated/assets/format.svg",
    "c890959d268bf53d6006012438788b4104189d3cfaf997b0b43b2fd4f1a41159",
  ],
  [
    "generated/sprite-info.ts",
    "6280072f9bbc11d77c987a1ce220c9a70197c7612119b86606025455d3feae97",
  ],
]
`;

exports[`examples > "metadata" example should generate files 1`] = `
[
  "assets/common/close.svg",
  "assets/common/favourite.svg",
  "assets/format/align-left.svg",
  "assets/format/tag.svg",
  "generated/common.2eb4b56f.svg",
  "generated/format.c890959d.svg",
  "generated/meta.ts",
]
`;

exports[`examples > "metadata" example should replay same output 1`] = `
[
  [
    "generated/common.2eb4b56f.svg",
    "2eb4b56ff266279ca9c0af3b16f7f3114ae35c4555657bb106acbd15ff9d4f52",
  ],
  [
    "generated/format.c890959d.svg",
    "c890959d268bf53d6006012438788b4104189d3cfaf997b0b43b2fd4f1a41159",
  ],
  [
    "generated/meta.ts",
    "789b7ca4856d0b2d1b105e8267a5950f77d4928ef1710b4db05438cefd96c27f",
  ],
]
`;

exports[`examples > "react" example should generate files 1`] = `
[
  "assets/common/close.svg",
  "assets/common/favourite.svg",
  "assets/format/align-left.svg",
  "assets/format/tag.svg",
  "example.tsx",
  "generated/common.svg",
  "generated/format.svg",
  "generated/sprite-info.ts",
  "icon.tsx",
]
`;

exports[`examples > "react" example should replay same output 1`] = `
[
  [
    "generated/common.svg",
    "2eb4b56ff266279ca9c0af3b16f7f3114ae35c4555657bb106acbd15ff9d4f52",
  ],
  [
    "generated/format.svg",
    "c890959d268bf53d6006012438788b4104189d3cfaf997b0b43b2fd4f1a41159",
  ],
  [
    "generated/sprite-info.ts",
    "0c82bd5eb1a18ea3337261408254d09db5cee2c8eeb4561ed6bca996b0e0d9c9",
  ],
]
`;

exports[`examples > "simple" example should generate files 1`] = `
[
  "assets/arrow-drop-down.svg",
  "assets/arrow-drop-up.svg",
  "generated/sprite-info.ts",
  "generated/sprite.svg",
]
`;

exports[`examples > "simple" example should replay same output 1`] = `
[
  [
    "generated/sprite.svg",
    "de338dcd1643d85f1cc9bc1b0fd01e6904bb82b600a1a4914c31577766ead4d2",
  ],
  [
    "generated/sprite-info.ts",
    "528cef17918096f4bec20bf6e16ff1d970c3999eb5b405469661a12b24c7cac4",
  ],
]
`;
